--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 destination: /tmp/jekyll
 baseurl: /post-thumbnail-editor/
-markdown: redcarpet
+markdown: kramdown
 pygments: true
 permalink: "/:title"
 
