--- a/trunk/client/package.json
+++ b/trunk/client/package.json
@@ -4,15 +4,19 @@
   "description": "Client for wordpress plugin \"Post Thumbnail Editor\"",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress --colors"
+    "build": "webpack --progress --colors --watch"
   },
   "author": "sewpafly",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.16.0",
     "imports-loader": "^0.6.4",
+    "less-loader": "^2.2.0",
     "riot": "^2.2.4",
+    "riotcontrol": "0.0.1",
+    "style-loader": "^0.12.3",
     "uglify-loader": "^1.2.0",
     "webpack": "^1.11.0"
   }
