--- a/trunk/client/package.json
+++ b/trunk/client/package.json
@@ -4,7 +4,8 @@
   "description": "Client for wordpress plugin \"Post Thumbnail Editor\"",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress --colors --watch"
+    "build": "webpack --progress --colors -p",
+    "watch": "webpack --progress --colors --watch"
   },
   "author": "sewpafly",
   "license": "MIT",
@@ -12,7 +13,6 @@
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.16.0",
-    "imports-loader": "^0.6.4",
     "less-loader": "^2.2.0",
     "riot": "^2.2.4",
     "riotcontrol": "0.0.1",
